Fix login/signup layout issue

--- a/public/less/app.less
+++ b/public/less/app.less
@@ -209,6 +209,11 @@ a.wt-link-focus {
   }
 }
 
+.btn.btn-info.btn-fb {
+  background: #3b5998;
+  border-color: #3b5998;
+}
+
 .nav.navbar-nav > li a, .text-body /*, .nav.nav-tabs > li > a, .dropdown-menu > li a, .dropdown a, .list-group.top-list-items*/ {
   font-size: 16px;
 }
